...
            enTitle: 'RECOLLE',
            trailing: Row(
              mainAxisSize: MainAxisSize.min,
              children: [
                NavBarIconButton(
                  icon: CupertinoIcons.search,
                  semanticLabel: '検索',
                  onPressed: () => Navigator.push(
                    context,
                    CupertinoPageRoute<void>(
                      builder: (_) => const SearchScreen(),
                    ),
                  ),
...
